# qrex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: args.rs  config.rs  error.rs  main.rs
src/handlers/: extractor.rs  handler.rs  metadata.rs  mod.rs
src/resource/: data.rs  mod.rs  names.rs  runner.rs  tree.rs
