[package]
name = "qrex"
description = "Process and extract Qt Resources"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"
binrw = "0.14.1"
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
env_logger = "0.11.5"
flate2 = { version = "1.0.34", features = ["zlib"], default-features = false }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8.19"
zstd = "0.13.2"