[package]
name = "qrex"
description = "Qt Resource Extractor"
version = "0.3.0"
authors = ["Michał Blinkiewicz <michal.blinkiewicz@gmail.com>"]
repository = "https://github.com/mb1986/qrex"
readme = "README.md"
license = "MIT"
keywords = ["qt", "resource", "extractor", "extraction"]
categories = ["data-structures", "command-line-utilities", "parsing"]
edition = "2021"

[dependencies]
anyhow = "1.0.91"
binrw = "0.14.1"
clap = { version = "4.5.20", features = ["derive"] }
clap_derive = "4.5.18"
env_logger = "0.11.5"
flate2 = { version = "1.0.34", features = ["zlib"], default-features = false }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
toml = "0.8.19"
zstd = "0.13.2"